gmake[3]: Entering directory `/home/i.galic/src/trafficserver/lib/tsconfig'
/bin/sh ../../libtool --tag=CXX --mode=compile g++ -m64 -DHAVE_CONFIG_H -I. -I../../lib/ts -I../../lib -I../../lib/ts -D_LARGEFILE64_SOURCE=1 -D_COMPILE64BIT_SOURCE=1 -D_GNU_SOURCE -D_REENTRANT -Dsolaris -I/opt/omni/include/amd64 -std=c++11 -g -pipe -Wall -Werror -O3 -feliminate-unused-debug-symbols -fno-strict-aliasing -Wno-invalid-offsetof -MT TsBuilder.lo -MD -MP -MF .deps/TsBuilder.Tpo -c -o TsBuilder.lo TsBuilder.cc
libtool: compile: g++ -m64 -DHAVE_CONFIG_H -I. -I../../lib/ts -I../../lib -I../../lib/ts -D_LARGEFILE64_SOURCE=1 -D_COMPILE64BIT_SOURCE=1 -D_GNU_SOURCE -D_REENTRANT -Dsolaris -I/opt/omni/include/amd64 -std=c++11 -g -pipe -Wall -Werror -O3 -feliminate-unused-debug-symbols -fno-strict-aliasing -Wno-invalid-offsetof -MT TsBuilder.lo -MD -MP -MF .deps/TsBuilder.Tpo -c TsBuilder.cc -fPIC -DPIC -o .libs/TsBuilder.o
In file included from TsBuilder.h:27:0,
from TsBuilder.cc:24:
TsValue.h: In member function 'ts::config::Value ts::config::Value::operator[](const char*) const':
TsValue.h:682:104: error: 'strlen' was not declared in this scope
TsValue.h: In member function 'ts::config::Value ts::config::Value::find(const char*)':
TsValue.h:687:93: error: 'strlen' was not declared in this scope
gmake[3]: *** [TsBuilder.lo] Error 1
gmake[3]: Leaving directory `/home/i.galic/src/trafficserver/lib/tsconfig'