TS-1688: Fix compile under OmniOS/gcc-4.7

include string.h to declare strlen()